fixed goals alignment again

--- a/Dip-and-Dash.css
+++ b/Dip-and-Dash.css
@@ -165,35 +165,27 @@ p {
 /*Goals*/
 .goal-container {
   position: relative;
-  margin-left: 0%;
-  height: 50%;
+  left: 0%;
   display: block;
 }
 .goal-cont-Img {
-  width: 35%;
+  width: 40%;
   height: 0%;
   display: block;
 }
 .goal-textbox {
   position: absolute;
-  top: 23.4%; 
-  left: 67.3%;
-  width: 12%;
-  height: 23%;
+  top: 23.3%;
+  width: 13%;
+  height: 22%;
   resize: none;
   background-color: rgba(222, 219, 210, 0.5);
   border: 0.1px solid #ffffff;
   padding: 8px;
   font-size: 18px;
-  line-height: 2;
+  line-height: 2.1;
 }
-.textArea {
-  width:300px;
-  height:200px;
-  padding: 10px;
-  font-size: 16px;
-  resize: none;
-}
+
 
 /*
 .dividers {
